--- a/Pages/orders.html
+++ b/Pages/orders.html
@@ -10,13 +10,13 @@
 <body>
     <ul>
         <li>
-            <a href="/html-basic-1/index.html">Home</a>
+            <a href="/Bebe-ops.github.io/index.html">Home</a>
         </li>
         <li>
             <a href="products.html">Products</a>
         </li>
         <li>
-            <a href="/html-basic-1/about.html">About</a>
+            <a href="/Bebe-ops.github.io/about.html">About</a>
         </li>
     </ul>
     <h1>Orders</h1>
