--- a/Pages/products.html
+++ b/Pages/products.html
@@ -10,13 +10,13 @@
 <body>
     <ul>
         <li>
-            <a href="/html-basic-1/index.html">Home</a>
+            <a href="/Bebe-ops.github.io/index.html">Home</a>
         </li>
         <li>
             <a href="orders.html">Orders</a>
         </li>
         <li>
-            <a href="/html-basic-1/about.html">About</a>
+            <a href="/Bebe-ops.github.io/about.html">About</a>
         </li>
     </ul>
     <h1>Products</h1>
