--- a/index.html
+++ b/index.html
@@ -5,51 +5,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is a superb page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1 id="content">Hello, this is a superb page</h1>
-    <!--Horgony ide ugrik-->
-    <ul>
-        <li>
-            <a href="Pages/products.html">Products</a>
-        </li>
-        <li>
-            <a href="Pages/orders.html">Orders</a>
-        </li>
-        <li>
-            <a href="about.html">About</a>
-        </li>
-    </ul>
+    <div id="box">
 
-
-    <h1>Fantastic Burger</h1>
-    <ul>
-        <li>Meat Love</li>
-        <ul>
-            <li>Beef</li>
-            <li>Pork</li>
-            <li>Chicken</li>
+        <!--Horgony ide ugrik-->
+        <ul id="menu">
+            <li>
+                <a href="Pages/products.html">Products</a>
+            </li>
+            <li>
+                <a href="Pages/orders.html">Orders</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
         </ul>
-        <li>Vegetarian</li>
-        <li>Piedone</li>
-    </ul>
-    <h2>Step of order</h2>
-    <ol>
-        <li>Choose a burger</li>
-        <li>Buy it</li>
-        <li>Give your address</li>
-        <li>Eat it</li>
-    </ol>
-    <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/" target="blank">Barbecued Burgers recipe</a>
-    <a href="https://www.nosalty.hu/izhuszar/top-5-legprofibb-hamburgerezo-europaban-listan-magyar-burgeres"
-        target="_blank">
-        <img src="https://www.nosalty.hu/files/nosalty-images/20190220/na.jpg" alt="tasty burger" width="60"><br>
-    </a>
-    <img src="img/burger.jpg" alt=""><br>
+        <h1 id="content">Fantastic Burger</h1>
 
-    <a href="index.html#content"><img src="img/arrow.png" alt="" width="30"></a>
-    <!--Horgony-->
+
+        <h1>Fantastic Burger</h1>
+        <ul>
+            <li>Meat Love</li>
+            <ul>
+                <li>Beef</li>
+                <li>Pork</li>
+                <li>Chicken</li>
+            </ul>
+            <li>Vegetarian</li>
+            <li>Piedone</li>
+        </ul>
+        <h2>Step of order</h2>
+        <ol>
+            <li>Choose a burger</li>
+            <li>Buy it</li>
+            <li>Give your address</li>
+            <li>Eat it</li>
+        </ol>
+        <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/" target="blank">Barbecued Burgers recipe</a>
+        <a href="https://www.nosalty.hu/izhuszar/top-5-legprofibb-hamburgerezo-europaban-listan-magyar-burgeres"
+            target="_blank">
+            <img src="https://www.nosalty.hu/files/nosalty-images/20190220/na.jpg" alt="tasty burger" width="60"><br>
+        </a>
+        <img src="img/burger.jpg" alt=""><br>
+
+        <a href="index.html#content"><img src="img/arrow.png" alt="" width="30"></a>
+        <!--Horgony-->
+    </div>
 </body>
 
 </html>
