--- a/Pages/products.html
+++ b/Pages/products.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -30,16 +31,16 @@
         </thead>
         <tbody>
             <tr>
-                <td>Meat Love</td>
-                <td>56</td>
+                <td>Meat Love Beef</td>
+                <td>56$</td>
             </tr>
             <tr>
-                <td>Meat Love</td>
-                <td>56</td>
+                <td>Meat Love Pork</td>
+                <td>43$</td>
             </tr>
             <tr>
-                <td>Meat Love</td>
-                <td>34</td>
+                <td>Meat Love Chicken</td>
+                <td>34$</td>
             </tr>
         </tbody>
         <thead>
