--- a/index.html
+++ b/index.html
@@ -14,44 +14,57 @@
         <!--Horgony ide ugrik-->
         <ul id="menu">
             <li>
-                <a href="Pages/products.html">Products</a>
+                <a href="Pages/products.html" class="point">Products</a>
             </li>
             <li>
-                <a href="Pages/orders.html">Orders</a>
+                <a href="Pages/orders.html" class="point">Orders</a>
             </li>
             <li>
-                <a href="about.html">About</a>
+                <a href="about.html" class="point">About</a>
             </li>
         </ul>
-        <h1 id="content">Fantastic Burger</h1>
-
-
-        <h1>Fantastic Burger</h1>
-        <ul>
-            <li>Meat Love</li>
-            <ul>
-                <li>Beef</li>
-                <li>Pork</li>
-                <li>Chicken</li>
-            </ul>
-            <li>Vegetarian</li>
-            <li>Piedone</li>
-        </ul>
-        <h2>Step of order</h2>
-        <ol>
-            <li>Choose a burger</li>
-            <li>Buy it</li>
-            <li>Give your address</li>
-            <li>Eat it</li>
-        </ol>
-        <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/" target="blank">Barbecued Burgers recipe</a>
-        <a href="https://www.nosalty.hu/izhuszar/top-5-legprofibb-hamburgerezo-europaban-listan-magyar-burgeres"
-            target="_blank">
-            <img src="https://www.nosalty.hu/files/nosalty-images/20190220/na.jpg" alt="tasty burger" width="60"><br>
-        </a>
-        <img src="img/burger.jpg" alt=""><br>
-
-        <a href="index.html#content"><img src="img/arrow.png" alt="" width="30"></a>
+        <h1 id="content">Fantastic Burger</h1><br>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
+            literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
+            Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem
+            Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable
+            source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes
+            of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular
+            during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
+            section 1.10.32.</p>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+            some form, by injected humour, or randomised words which don't look even slightly believable. If you are
+            going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the
+            middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as
+            necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin
+            words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable.
+            The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic
+            words etc.</p>
+        <img src="img/burger.jpg" alt="tasty"><br>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
+            literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
+            Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem
+            Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable
+            source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes
+            of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular
+            during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
+            section 1.10.32.
+        <h2>Tasty burgers</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ultricies justo dui, quis cursus nibh dictum
+            sit amet. Quisque vehicula, lorem non hendrerit feugiat, nisl elit bibendum velit, vitae venenatis nulla
+            ante eget nisl. Curabitur nec orci lacus. Pellentesque luctus pellentesque nunc, vel iaculis ligula
+            imperdiet ac. Quisque finibus pellentesque libero non lacinia. Cras fermentum, orci sit amet convallis
+            dapibus, nibh ligula faucibus purus, vitae rutrum libero eros nec massa. Ut viverra tempus elit iaculis
+            laoreet. Donec commodo ex sed mi pellentesque pharetra. Aliquam tincidunt vitae sapien at faucibus.
+            Sed feugiat facilisis lacinia. Praesent malesuada tellus vitae viverra pellentesque. Duis vestibulum, justo
+            molestie interdum efficitur, eros justo fringilla neque, nec volutpat diam orci id augue. In sollicitudin
+            ipsum at tempus efficitur. Proin eu interdum eros. Donec sollicitudin non nisl vitae aliquet. Nullam eu
+            fermentum ante. In vel mauris vel arcu tristique viverra.</p>
+        <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+            1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact
+            original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+          
+        <a href="index.html#content"><img src="img/arrow.png" alt="page up" width="30" id="arrow"></a>
         <!--Horgony-->
     </div>
 </body>
