--- a/Pages/orders.html
+++ b/Pages/orders.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orders</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -20,6 +21,13 @@
         </li>
     </ul>
     <h1>Orders</h1>
+    <h2>Step of order</h2>
+        <ol>
+            <li>Choose a burger</li>
+            <li>Buy it</li>
+            <li>Give your address</li>
+            <li>Eat it</li>
+        </ol>
 </body>
 
 </html>
