--- a/Pages/orders.html
+++ b/Pages/orders.html
@@ -9,25 +9,29 @@
 </head>
 
 <body>
-    <ul>
-        <li>
-            <a href="/Bebe-ops.github.io/index.html">Home</a>
-        </li>
-        <li>
-            <a href="products.html">Products</a>
-        </li>
-        <li>
-            <a href="/Bebe-ops.github.io/about.html">About</a>
-        </li>
-    </ul>
-    <h1>Orders</h1>
-    <h2>Step of order</h2>
+    <div id="box">
+        <ul id="menu">
+            <li>
+                <a href="/Bebe-ops.github.io/index.html">Home</a>
+            </li>
+            <li>
+                <a href="products.html">Products</a>
+            </li>
+            <li>
+                <a href="/Bebe-ops.github.io/about.html">About</a>
+            </li>
+        </ul>
+        <h1 id="content">Orders</h1>
+        <h2>Step of order</h2>
         <ol>
             <li>Choose a burger</li>
             <li>Buy it</li>
             <li>Give your address</li>
             <li>Eat it</li>
         </ol>
+        <a href="index.html#content"><img src="img/arrow.png" alt="page up" width="30" id="arrow"></a>
+        <!--Horgony-->
+    </div>
 </body>
 
 </html>
