--- a/Pages/products.html
+++ b/Pages/products.html
@@ -9,45 +9,46 @@
 </head>
 
 <body>
-    <ul>
-        <li>
-            <a href="/Bebe-ops.github.io/index.html">Home</a>
-        </li>
-        <li>
-            <a href="orders.html">Orders</a>
-        </li>
-        <li>
-            <a href="/Bebe-ops.github.io/about.html">About</a>
-        </li>
-    </ul>
-    <h1>Products</h1>
+    <div id="box">
+        <ul id="menu">
+            <li>
+                <a href="/Bebe-ops.github.io/index.html">Home</a>
+            </li>
+            <li>
+                <a href="orders.html">Orders</a>
+            </li>
+            <li>
+                <a href="/Bebe-ops.github.io/about.html">About</a>
+            </li>
+        </ul>
+        <h1 id="content">Products</h1>
 
-    <table width="400px">
-        <caption>Menu</caption>
-        <thead>
-            <tr>
-                <th>Sandwiches</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Meat Love Beef</td>
-                <td>56$</td>
-            </tr>
-            <tr>
-                <td>Meat Love Pork</td>
-                <td>43$</td>
-            </tr>
-            <tr>
-                <td>Meat Love Chicken</td>
-                <td>34$</td>
-            </tr>
-        </tbody>
-        <thead>
-            <tr>
-                <th>Garnishes</th>
-            </tr>
-        </thead>
+        <table width="400px">
+            <caption>Menu</caption>
+            <thead>
+                <tr>
+                    <th>Sandwiches</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Meat Love Beef</td>
+                    <td>56$</td>
+                </tr>
+                <tr>
+                    <td>Meat Love Pork</td>
+                    <td>43$</td>
+                </tr>
+                <tr>
+                    <td>Meat Love Chicken</td>
+                    <td>34$</td>
+                </tr>
+            </tbody>
+            <thead>
+                <tr>
+                    <th>Garnishes</th>
+                </tr>
+            </thead>
             <tbody>
                 <tr>
                     <td>Rice</td>
@@ -63,9 +64,9 @@
                 </tr>
             </tbody>
             <thead>
-            <tr>
-                <th>Drinks</th>
-            </tr>
+                <tr>
+                    <th>Drinks</th>
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -81,7 +82,10 @@
                     <td>34</td>
                 </tr>
             </tbody>
-    </table>
+        </table>
+        <a href="index.html#content"><img src="img/arrow.png" alt="page up" width="30" id="arrow"></a>
+        <!--Horgony-->
+    </div>
 </body>
 
 </html>
