--- a/about.html
+++ b/about.html
@@ -9,58 +9,65 @@
 </head>
 
 <body>
-    <ul>
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="Pages/products.html">Products</a>
-        </li>
-        <li>
-            <a href="Pages/orders.html">Orders</a>
-        </li>
-    </ul>
-    <h1>About</h1>
+    <div id="box">
+        <ul id="menu">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="Pages/products.html">Products</a>
+            </li>
+            <li>
+                <a href="Pages/orders.html">Orders</a>
+            </li>
+        </ul>
+        <h1 id="content">About</h1>
 
-    <h2>Address</h2>
-    <p>Honolulu, HI 96815, USA</p><br>
+        <h2>Address</h2>
+        <p>Honolulu, HI 96815, USA</p><br>
 
-    <h2>Telephone</h2>
-    <p>+18087683003</p><br>
+        <h2>Telephone</h2>
+        <p>+18087683003</p><br>
 
-    <table width="250px" border="1px solid lightgrey">
-        <caption>Opening Ours</caption>
-        <thead>
-            <tr>
-                <th>Day</th>
-                <th>Open</th>
-                <th>Close</th>  
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Monday-Friday</td>
-                <td>09:00</td>
-                <td rowspan="2">21:00</td>
-            </tr>
-            <tr>
-                <td>Saturday</td>
-                <td>10:00</td>
-            </tr>
-            <tr>
-                <td>Sunday</td>
-                <td colspan="2">closed</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="3">&copy;2020</td>
-            </tr>
-        </tfoot>
-    </table>
+        <table width="250px" border="1px solid lightgrey">
+            <caption>Opening Ours</caption>
+            <thead>
+                <tr>
+                    <th>Day</th>
+                    <th>Open</th>
+                    <th>Close</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Monday-Friday</td>
+                    <td>09:00</td>
+                    <td rowspan="2">21:00</td>
+                </tr>
+                <tr>
+                    <td>Saturday</td>
+                    <td>10:00</td>
+                </tr>
+                <tr>
+                    <td>Sunday</td>
+                    <td colspan="2">closed</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3">&copy;2020</td>
+                </tr>
+            </tfoot>
+        </table>
 
-    <h2>Accessibility</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3717.746326585472!2d-157.84132938529643!3d21.281506685862002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c006df5f96c6323%3A0xf49e91c981680a2b!2sKahanamoku%20Beach!5e0!3m2!1shu!2shu!4v1591198693226!5m2!1shu!2shu" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <h2>Accessibility</h2>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3717.746326585472!2d-157.84132938529643!3d21.281506685862002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c006df5f96c6323%3A0xf49e91c981680a2b!2sKahanamoku%20Beach!5e0!3m2!1shu!2shu!4v1591198693226!5m2!1shu!2shu"
+            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            tabindex="0"></iframe>
+        <a href="index.html#content"><img src="img/arrow.png" alt="page up" width="30" id="arrow"></a>
+        <!--Horgony-->
+    </div>
 </body>
 
 </html>
