--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="box">
 
-        <!--Horgony ide ugrik-->
+        
         <ul id="menu">
             <li>
                 <a href="Pages/products.html" class="point">Products</a>
@@ -23,7 +23,7 @@
                 <a href="about.html" class="point">About</a>
             </li>
         </ul>
-        <h1 id="content">Fantastic Burger</h1><br>
+        <h1 id="content">Fantastic Burger</h1><br>              <!--Horgony ide ugrik-->
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
             literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
             Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem
