--- a/Pages/products.html
+++ b/Pages/products.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <div id="box">
         <ul id="menu">
             <li>
-                <a href="/Bebe-ops.github.io/index.html">Home</a>
+                <a href="/index.html" class="point">Home</a>
             </li>
             <li>
-                <a href="orders.html">Orders</a>
+                <a href="orders.html" class="point">Orders</a>
             </li>
             <li>
-                <a href="/Bebe-ops.github.io/about.html">About</a>
+                <a href="/about.html" class="point">About</a>
             </li>
         </ul>
         <h1 id="content">Products</h1>
@@ -83,7 +83,7 @@
                 </tr>
             </tbody>
         </table>
-        <a href="index.html#content"><img src="img/arrow.png" alt="page up" width="30" id="arrow"></a>
+        <a href="products.html#content"><img src="img/arrow.png" alt="page up" width="30" id="arrow"></a>
         <!--Horgony-->
     </div>
 </body>
