--- a/Pages/orders.html
+++ b/Pages/orders.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orders</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <div id="box">
         <ul id="menu">
             <li>
-                <a href="/Bebe-ops.github.io/index.html">Home</a>
+                <a href="/index.html" class="point">Home</a>
             </li>
             <li>
-                <a href="products.html">Products</a>
+                <a href="products.html" class="point">Products</a>
             </li>
             <li>
-                <a href="/Bebe-ops.github.io/about.html">About</a>
+                <a href="/about.html" class="point">About</a>
             </li>
         </ul>
         <h1 id="content">Orders</h1>
@@ -29,7 +29,7 @@
             <li>Give your address</li>
             <li>Eat it</li>
         </ol>
-        <a href="index.html#content"><img src="img/arrow.png" alt="page up" width="30" id="arrow"></a>
+        <a href="orders.html#content"><img src="/img/arrow.png" alt="page up" width="30" id="arrow"></a>
         <!--Horgony-->
     </div>
 </body>
