--- a/about.html
+++ b/about.html
@@ -12,13 +12,13 @@
     <div id="box">
         <ul id="menu">
             <li>
-                <a href="index.html">Home</a>
+                <a href="index.html" class="point">Home</a>
             </li>
             <li>
-                <a href="Pages/products.html">Products</a>
+                <a href="Pages/products.html" class="point">Products</a>
             </li>
             <li>
-                <a href="Pages/orders.html">Orders</a>
+                <a href="Pages/orders.html" class="point">Orders</a>
             </li>
         </ul>
         <h1 id="content">About</h1>
@@ -65,7 +65,7 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3717.746326585472!2d-157.84132938529643!3d21.281506685862002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c006df5f96c6323%3A0xf49e91c981680a2b!2sKahanamoku%20Beach!5e0!3m2!1shu!2shu!4v1591198693226!5m2!1shu!2shu"
             width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
             tabindex="0"></iframe>
-        <a href="index.html#content"><img src="img/arrow.png" alt="page up" width="30" id="arrow"></a>
+        <a href="about.html#content"><img src="img/arrow.png" alt="page up" width="30" id="arrow"></a>
         <!--Horgony-->
     </div>
 </body>
