--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is a superb page</title>
+    <title>index</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
