--- a/Pages/products.html
+++ b/Pages/products.html
@@ -83,7 +83,7 @@
                 </tr>
             </tbody>
         </table>
-        <a href="products.html#content"><img src="img/arrow.png" alt="page up" width="30" id="arrow"></a>
+        <a href="products.html#content"><img src="/img/arrow.png" alt="page up" width="30" id="arrow"></a>
         <!--Horgony-->
     </div>
 </body>
