--- a/Pages/products.html
+++ b/Pages/products.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
     <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/55b28d4cc7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,8 +23,8 @@
             </li>
         </ul>
         <h1 id="content">Products</h1>
-
-        <table width="400px">
+    <div class=table-div>
+        <table>
             <caption>Menu</caption>
             <thead>
                 <tr>
@@ -83,6 +84,8 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+
         <a href="products.html#content"><img src="/img/arrow.png" alt="page up" width="30" id="arrow"></a>
         <!--Horgony-->
     </div>
